# scrapy-algolia-exporter

./: .travis.yml  README.md  setup.cfg  setup.py
requirements/: requirements.txt
scrapy_algolia_exporter/: exporters.py  pipelines.py
tests/: test_exporters.py  test_pipelines.py
