[metadata]
name = scrapy_algolia_exporter
version = 0.0.2
url = https://github.com/clemfromspace/scrapy-algolia-exporter
licence = DO WHAT THE FUCK YOU WANT TO PUBLIC LICENSE
description = Scrapy item exporter for the Algolia API
long_description = file:README.md

[options]
include_package_data = true

[pep8]
max-line-length = 100
